mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: default # K  namespace: default, keeping to default we can create namespace with "apply -nanemspace flag
labels:
    app: mongo-express
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers: # Deployment -> Pod
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-express-service
  namespace: default
spec:
  selector: #External Service connects client to worker
    app: mongo-express
  type: LoadBalancer # assigns service an external IP address to accept external requests
  ports:
    - protocol: TCP
      port: 8081 # listening port
      targetPort: 8081 # forwarding port
      nodePort: 30000 #Port for external IP address
