mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers: # Deployment -> Pod
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
spec:
  selector: # Internal Service Connects to Pod app:mongodb from mongo-express
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # listening port
      targetPort: 27017 # forwarding port
